--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,3 +41,12 @@ body {
   font-weight: bold;
   text-transform: uppercase;
 }
+.notification-container {
+  position: absolute;
+  background: white;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1050;
+  width: auto;
+  max-width: 300px;
+}
