--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,16 +42,12 @@ body {
   font-weight: bold;
   text-transform: uppercase;
 }
-.notification-container {
-  position: absolute;
-  background: white;
-  top: 1rem;
-  right: 1rem;
-  z-index: 1050;
-  width: auto;
-  max-width: 300px;
-}
 .dropdown-item:hover {
   border-radius: 8px;
   background-color: #dcdfe0;
+}
+.modal-content {
+  background-color: transparent;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
