--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,3 +51,6 @@ body {
   border: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.bg-customPink-important {
+  background-color: #ed51c2 !important;
+}
