--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,3 +59,57 @@ body {
   background-color: #ed51c2 !important;
 }
 
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  right: 36px;
+  top: 40px;
+}
+
+.bm-burger-bars {
+  background: white;
+}
+
+.bm-cross {
+  background: white;
+}
+.bm-menu-wrap {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+  height: 100%;
+  width: 100%;
+}
+
+.bm-item-list {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.bm-item {
+  margin-bottom: 10px;
+  color: #d1d1d1;
+}
+
+.bm-item:hover {
+  color: white;
+}
+
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
