--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -113,3 +113,11 @@ body {
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+
+.bm-burger-button {
+  position: sticky;
+}
+/* .bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+} */
