--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,3 +121,15 @@ body {
   position: fixed;
   height: 100%;
 } */
+.bm-cross-button {
+  height: 40px !important;
+  width: 40px !important;
+  top: 20px !important;
+  right: 20px !important;
+}
+
+.bm-cross {
+  background: #ff69b4 !important;
+  height: 40px !important;
+  width: 5px !important;
+}
