--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -26,9 +27,7 @@ body {
     text-wrap: balance;
   }
 }
-.custom-rounded-button {
-  border-radius: 9999px !important;
-}
+
 .custom-table-border {
   border-top-radius: 20px !important;
   border: 2px solid red;
